# rust-ipc-extension-sqs-destination

./: .gitignore  README.md  cdk.json  package-lock.json  package.json
extension/: Cargo.toml
extension/src/: client.rs  main.rs
lib/: receiver-function.ts  rust-extension-akin-destinations-stack.ts  sample-function.ts
