[package]
name = "extension"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
openssl-sys = "0.9.80"
native-tls = { version = "0.2.11", features = ["vendored"] }
actix-web = "4.3.0"
aws-config = "0.54.1"
aws-sdk-dynamodb = "0.24.0"
aws-sdk-sqs = "0.24.0"
